--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
             </picture>
         </div>
     </main>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Ebenezer Raphael</a>.
-  </div>
+    <div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="#">Ebenezer Raphael</a>.
+    </div>
 </body>
 </html>
