--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </main>
     <div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="#">Ebenezer Raphael</a>.
+        Coded by <a href="https://www.frontendmentor.io/profile/ebenezerraph">Ebenezer Raphael</a>.
     </div>
 </body>
 </html>
