--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
           </div>
         </div>
         <div>
-            <picture>
+            <img class="mobile-image image" src="images/image-header-mobile.jpg" alt="" />
+            <img class="desktop-image image" src="images/image-header-desktop.jpg" alt="" />
+            <!-- <picture>
                 <source srcset="images/image-header-mobile.jpg" media="(max-width: 700px)">
                 <source srcset="images/image-header-desktop.jpg">
                 <img class="image" src="images/image-header-desktop.jpg" alt="image">
-            </picture>
+            </picture> -->
         </div>
     </main>
     <div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
