--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="styles.css" type="text/css" />
 </head>
 <body>
+  <div>
     <main class="flex-container">
         <div class="content">
           <h2 class="heading">Get <span>insights</span> that help your business grow.</h2>
@@ -32,5 +33,6 @@
     <div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
         Coded by <a href="https://www.frontendmentor.io/profile/ebenezerraph">Ebenezer Raphael</a>.
     </div>
+  </div>
 </body>
 </html>
