--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div>
-    <main class="flex-container">
+    <main>
         <div class="content">
           <h2 class="heading">Get <span>insights</span> that help your business grow.</h2>
           <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer 
@@ -21,13 +21,8 @@
           </div>
         </div>
         <div>
-            <img class="mobile-image image" src="images/image-header-mobile.jpg" alt="" />
-            <img class="desktop-image image" src="images/image-header-desktop.jpg" alt="" />
-            <!-- <picture>
-                <source srcset="images/image-header-mobile.jpg" media="(max-width: 700px)">
-                <source srcset="images/image-header-desktop.jpg">
-                <img class="image" src="images/image-header-desktop.jpg" alt="image">
-            </picture> -->
+            <img class="mobile-image image" src="images/image-header-mobile.jpg" alt="image" />
+            <img class="desktop-image image" src="images/image-header-desktop.jpg" alt="image" />
         </div>
     </main>
     <div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
