--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer 
           experience, and overall efficiency.</p>
           <div class= "stats">
-            <span class="stat"><span id="stat">10k+</span><span class="stat-heading">companies</span></span>
-            <span class="stat"><span id="stat">314</span><span class="stat-heading">templates</span></span>
-            <span class="stat"><span id="stat">12M+</span><span class="stat-heading">queries</span></span>
+            <span class="stat"><span class="the-stat">10k+</span><span class="stat-heading">companies</span></span>
+            <span class="stat"><span class="the-stat">314</span><span class="stat-heading">templates</span></span>
+            <span class="stat"><span class="the-stat">12M+</span><span class="stat-heading">queries</span></span>
           </div>
         </div>
         <div>
