--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,27 +8,30 @@
   <title>Frontend Mentor | Stats preview card component</title>
   <link rel="stylesheet" href="styles.css" type="text/css" />
 </head>
+
 <body>
   <div>
     <main>
-        <div class="content">
-          <h2 class="heading">Get <span>insights</span> that help your business grow.</h2>
-          <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+      <div class="content">
+        <h2 class="heading">Get <span>insights</span> that help your business grow.</h2>
+        <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer
           experience, and overall efficiency.</p>
-          <div class= "stats">
-            <span class="stat"><span class="the-stat">10k+</span><span class="stat-heading">companies</span></span>
-            <span class="stat"><span class="the-stat">314</span><span class="stat-heading">templates</span></span>
-            <span class="stat"><span class="the-stat">12M+</span><span class="stat-heading">queries</span></span>
-          </div>
+        <div class="stats">
+          <span class="stat"><span class="the-stat">10k+</span><span class="stat-heading">companies</span></span>
+          <span class="stat"><span class="the-stat">314</span><span class="stat-heading">templates</span></span>
+          <span class="stat"><span class="the-stat">12M+</span><span class="stat-heading">queries</span></span>
         </div>
-        <div>
-          <img class="mobile-image image" src="images/image-header-mobile.jpg" alt="image" />
-          <img class="desktop-image image" src="images/image-header-desktop.jpg" alt="image" />
-        </div>
+      </div>
+      <div>
+        <img class="mobile-image image" src="images/image-header-mobile.jpg" alt="image" />
+        <img class="desktop-image image" src="images/image-header-desktop.jpg" alt="image" />
+      </div>
     </main>
-    <div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    <div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend
+        Mentor</a>.
       Coded by <a href="https://www.frontendmentor.io/profile/ebenezerraph">Ebenezer Raphael</a>.
     </div>
   </div>
 </body>
+
 </html>
